<resources>
    <string name="app_name">COVID-News</string>
    <!-- Login -->
    <string name="login">登录</string>
    <string name="login_user_hint">请输入用户名</string>
    <string name="login_psw_hint">请输入密码</string>
    <!-- Menu -->
    <string name="menu_history">历史记录</string>
    <string name="menu_logout">退出登录</string>
    <!-- Title -->
    <string name="title_home">首页</string>
    <string name="title_dashboard">疫情数据</string>
    <string name="title_scholar">知疫学者</string>
    <string name="title_kg">知识图谱</string>
    <string name="title_user">我的</string>
    <string name="query_hint">请输入新闻关键词</string>
    <string name="title_search_kg">COKG-19</string>
    <string name="intro_search_kg">大规模、结构化新冠知识图谱(COKG-19)，包含了505个概念、393个属性、26282个实例和32352个知识三元组，覆盖了医疗、健康、物资、防控、科研和人物等。</string>
    <string name="title_relation">关系</string>
    <string name="title_property">属性</string>
    <string name="share">分享</string>
    <string name="share_wx">分享到微信</string>
    <string name="share_qq">分享到QQ</string>
    <string name="news_history">新闻查看记录</string>
    <string name="news_clear">清空历史列表</string>
    <string name="news_cluster">猜你可能想看</string>

</resources>
