<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_scholar"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_scholar" />

    <item
        android:id="@+id/navigation_knowledge_graph"
        android:icon="@drawable/ic_knowledge"
        android:title="@string/title_kg" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/title_user" />

</menu>
