<?xml version="1.0" encoding="utf-8"?>
<!--登录界面,用LinearLayout-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <!--标题栏-->
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:padding="40dp"
            android:id="@+id/header_box"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <!-- Covid-News Login -->
            <TextView
                android:id="@+id/covid_app"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center"
                android:padding="25dp"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="35sp" />

            <!--输入框-->
            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/user_name_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:hint="@string/login_user_hint"
                android:singleLine="true"
                android:textSize="20sp" />
            <!--输入框-->
            <EditText
                android:id="@+id/et_psw"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/psw_icon"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:hint="@string/login_psw_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="20sp"/>
            <!--按钮 120dp?-->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>