<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment"
    android:orientation="vertical">

    <include layout="@layout/nav_header_user"/>

    <LinearLayout
        android:id="@+id/layout_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/card_rectangle"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_history"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/news_history"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delete_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/card_rectangle"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/news_clear"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_see_cluster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/card_rectangle"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cluster"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/news_cluster"
            android:textSize="16dp"/>
    </LinearLayout>

</LinearLayout>